FIX: Refactored all Logic behind ProductService: - Add mapping - Add Methods (toDTO and toEntity) - Remove @Autowired - Add @Transactional